# ES_Project_IR_Sensor

Software_ESP32/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1.old
Software_ESP32/components/bsp/src/peripherals/: lcd_panel_st7789.c  lcd_panel_st7796.c
Software_ESP32/components/iot_button/: CMakeLists.txt
Software_ESP32/components/lvgl/src/: lv_conf_internal.h
Software_ESP32/lib/hmi_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
Software_ESP32/lib/hmi_ui/components/: ui_comp.h  ui_comp_buttonminus.c  ui_comp_buttonminus.h  ui_comp_hook.c  ui_comp_hook.h
Software_ESP32/lib/hmi_ui/images/: ui_img_background_png.c  ui_img_location2_png.c
Software_ESP32/lib/hmi_ui/screens/: ui_ScreenCamera.c  ui_ScreenLoRa.c  ui_ScreenSensors.c
Software_ESP32/src/: CMakeLists.txt  display_handler.cpp  display_handler.h  lorawan_handler.cpp  lorawan_handler.h  main.cpp  measurement_data.cpp  measurement_data.h  uart_handler.cpp  uart_handler.h
Software_RP2040/: platformio.ini
Software_RP2040/src/: main.cpp
squareline_project/squareline_project/: SquareLine_Project.sll  SquareLine_Project.spj
squareline_project/squareline_project/components/: ButtonMinus.ecomp
